
* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

COMMITERS

Do not forget to update this page on the wiki when making changes relevant to developers:
http://docs.joomla.org/index.php?title=Version_1.6_Developer_Notes

25-Jan-2009 Andrew Eddie
 - Removed JTemplate and Legacy plugin
 + Add Generation 3 access control tables and framework

25-Jan-2009 Rob Schley
 - Removed com_polls and mod_polls.
 # Fixed the admin login form rendering incorrectly after a timeout.
 ^ Changed JRegistry::toString with PHP format to use public properties.
 ^ Changed JConfig in the distribution file to have public properties.
 # Fixed references to com_frontpage in the administrator interface.
 ^ Updated SqueezeBox to 1.1 rc2 for MooTools 1.2.
 + Added JText._() and JText.load() to MooTools 1.2 JavaScript to make JavaScript I18N easier.
 + Added JText::script for JavaScript I18N.
 + Added support for JavaScript I18N in JDocumentHTML.
 ^ Cleaned up the site and administrator index.php files.
 - Removed Foood icons from the administrator and site.
 - Removed images/stories, images/smilies, and images/M_images and other old images.

25-Jan-2009 Anthony Ferrara
 + Added JClass base class
 - Removed JStdClass
 ^ Renamed references from JStdClass to JObject 
 + Added JContent Class
 ^ Moved configuration.php-dist into installation folder

24-Jan-2009 Anthony Ferrara
 + Added onBeforeRender Trigger
 + Added onAfterCacheRender Trigger
 + Added parse method to JDocument and JDocumentHTML
 ^ Moved all "system" triggers inside of JApplication/children

24-Jan-2009 Andrew Eddie
 ^ Move text files to /installation/ folder
 
23-Jan-2009 Anthony Ferrara
 + Added JFactory::getFeedParser() to return simplepie object
 ^ Deprecated JFactory::getXMLParser()
 ^ Throw exception on calling JFactory::getXMLParser with 'DOM' type (since DomDocument is removed)
 - Dommit library removed
 - XMLRPC plugins/config/installsql removed
 