@@ -1,0 +1,117 @@
+<?php
+/**
+ * @version		$Id$
+ * @copyright	Copyright (C) 2005 - 2009 Open Source Matters, Inc. All rights reserved.
+ * @copyright	Copyright (C) 2008 - 2009 JXtended, LLC. All rights reserved.
+ * @license		GNU General Public License, see LICENSE.php
+ */
+
+defined('JPATH_BASE') or die;
+
+jimport('joomla.application.component.model');
+jimport('joomla.database.query');
+
+/**
+ * Prototype item model.
+ *
+ * @package		Joomla.Framework
+ * @subpackage	Application
+ * @version		1.6
+ */
+class JModelItem extends JModel
+{
+	/**
+	 * Flag to indicate model state initialization.
+	 *
+	 * @access	private
+	 * @var		boolean
+	 */
+	var $__state_set	= false;
+
+	/**
+	 * Array of items.
+	 *
+	 * @access	protected
+	 * @var		array
+	 */
+	var $_items			= array();
+
+	/**
+	 * Model context string.
+	 *
+	 * @access	protected
+	 * @var		string
+	 */
+	 var $_context		= 'group.type';
+
+	/**
+	 * Overridden model constructor.
+	 *
+	 * @access	public
+	 * @param	array	$config	Configuration array
+	 * @return	void
+	 */
+	function __construct($config = array())
+	{
+		// If ignore request flag is set, set the state set flag.
+		if (!empty($config['ignore_request'])) {
+			$this->__state_set = true;
+		}
+		parent::__construct($config);
+	}
+
+	/**
+	 * Overridden method to get model state variables.
+	 *
+	 * @access	public
+	 * @param	string	$property	Optional parameter name.
+	 * @return	object	The property where specified, the state object where omitted.
+	 */
+	function getState($property = null, $default = null)
+	{
+		if (!$this->__state_set)
+		{
+			// Private method to auto-populate the model state.
+			$this->_populateState();
+
+			// Set the model state set flat to true.
+			$this->__state_set = true;
+		}
+
+		$value = parent::getState($property);
+		return (is_null($value) ? $default : $value);
+	}
+
+	/**
+	 * Method to get a store id based on model configuration state.
+	 *
+	 * This is necessary because the model is used by the component and
+	 * different modules that might need different sets of data or different
+	 * ordering requirements.
+	 *
+	 * @access	protected
+	 * @param	string		$context	A prefix for the store id.
+	 * @return	string		A store id.
+	 */
+	function _getStoreId($id = '')
+	{
+		// Compile the store id.
+
+		return md5($id);
+	}
+
+	/**
+	 * Method to auto-populate the model state.
+	 *
+	 * This method should only be called once per instantiation and is designed
+	 * to be called on the first call to the getState() method unless the model
+	 * configuration flag to ignore the request is set.
+	 *
+	 * @access	protected
+	 * @return	void
+	 */
+	function _populateState()
+	{
+		$this->setState('list.start', 0);
+	}
+}
